# terminedia-paint

./: README.md  pyproject.toml  setup.py
terminedia_paint/: __init__.py  __main__.py  terminedia_paint.py
